--- a/thankyou.html
+++ b/thankyou.html
@@ -35,7 +35,7 @@
             <hr class="my-4">
             <p>If you have any questions about your trip or need further assistance, please contact our support team.
             </p>
-            <a class="btn btn-primary btn-lg" href="/index.html" role="button">Go to Homepage</a>
+            <a class="btn btn-primary btn-lg" href="./index.html" role="button">Go to Homepage</a>
         </div>
     </div>
 
